@@ -351,3 +351,6 @@ Change list for PernMangband
 - lv-req can handle {0} stuffs from stores.
 - 4 'Pattern vaults' are commented out. 5 more original vaults.
 - Bug in new auto-retaliator code is fixed(thx Moltor for report).
+
+01/12/2001 (Jir)
+- lv-req is now based on both item's quality and depth.
